# CZRecorder

./: .gitignore  README.md  build.gradle  settings.gradle
Lame/LameMP3/CMake/: CMakeLists.txt  build.gradle
Lame/LameMP3/CMake/src/main/cpp/lamemp3/: CMakeLists.txt  id3tag.h  machine.h
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/chezi/mp3recorddemo/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/chezi008/mp3recorddemo/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/module/mp3recorddemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: lame_util.c  native-lib.cpp
app/src/main/java/com/chezi/mp3recorder/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
mp3recorderlib/: CMakeLists.txt  build.gradle
mp3recorderlib/src/androidTest/java/com/ibbhub/mp3recorderlib/: ExampleInstrumentedTest.java
mp3recorderlib/src/main/: AndroidManifest.xml
mp3recorderlib/src/main/java/com/ibbhub/mp3recorderlib/: DateUtils.java  IAudioRecorder.java  Mp3Recorder.java  PCMFormat.java  RecorderProgressView.java  RecorderView.java  SpectrumView.java
mp3recorderlib/src/main/java/com/ibbhub/mp3recorderlib/audio/: CzAudioRecorder.java  Mp3Recorder.java
mp3recorderlib/src/main/java/com/ibbhub/mp3recorderlib/listener/: AudioRecordListener.java
mp3recorderlib/src/main/java/com/ibbhub/mp3recorderlib/utils/: DateUtils.java  DensityUtils.java  LameUtil.java  PCMFormat.java
mp3recorderlib/src/main/java/com/ibbhub/mp3recorderlib/widget/: DoughnutProgress.java  MicView.java  SpectrumView.java  WaveView.java
mp3recorderlib/src/main/res/drawable/: ve_mic_white.xml
mp3recorderlib/src/main/res/values/: strings.xml
mp3recorderlib/src/test/java/com/ibbhub/mp3recorderlib/: ExampleUnitTest.java
recorder-audio/: build.gradle
recorder-audio/libs/include/libmp3lame/i386/: nasm.h
recorder-audio/src/main/: AndroidManifest.xml
recorder-audio/src/main/cpp/: lame_util.c
recorder-audio/src/main/res/values/: styles.xml
(+38 files in other folders)
